--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -18,6 +18,9 @@
 .btn {
     @include btn-static;
 }
+.btn-primary {
+    @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+}
 .btn-default {
     @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
 }
